excel v2 - apply CoR